# PhotoMind

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml
crates/core/: Cargo.toml
crates/core/src/: embedding.rs  error.rs  lib.rs  search.rs  thumbnail.rs  vision.rs  watcher.rs
crates/core/src/agent/: engine.rs  mod.rs  provider.rs  types.rs
crates/core/src/scanner/: mod.rs  mod_scanner.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/api/: chat.rs  mod.rs  search.rs  settings.rs  status.rs  tools.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  error.rs  models.rs
crates/storage/src/repo/: chat.rs  configs.rs  embeddings.rs  mod.rs  photos.rs  tools.rs
crates/tools/: Cargo.toml
crates/tools/src/: error.rs  lib.rs
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: AddToolDialog.tsx  DirBrowserDialog.tsx  PhotoLightbox.tsx
web/src/lib/: api.ts
web/src/pages/: ChatPage.tsx  SearchPage.tsx  SettingsPage.tsx
