[workspace]
members = [
    "crates/server",
    "crates/core",
    "crates/storage",
    "crates/tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Image processing
image = "0.25"
kamadak-exif = "0.5"

# File watching
notify = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"

# Internal crates
photomind-core = { path = "crates/core" }
photomind-storage = { path = "crates/storage" }
photomind-tools = { path = "crates/tools" }
