[package]
name = "photomind-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "photomind"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
sqlx.workspace = true
uuid.workspace = true
base64.workspace = true
photomind-core.workspace = true
photomind-storage.workspace = true
photomind-tools.workspace = true
